ARROW-10264: [Python] Fix failing hdfs test

Closes #9192 from jorisvandenbossche/ARROW-10264-hdfs-tests

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>